# pygtm

./: .gitignore  .travis.yml  README  README.md  environement.txt  environement.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  ci.yml  conda_pytest.yml  python-package-conda.yml
docs/: conf.py  paper.md
example/: 01-physical_domain.ipynb  02-search_elements.ipynb  03-trajectoires.ipynb  04-transition_matrix.ipynb  05-push_forward.ipynb  06-lagrangian_geography.ipynb  usage_example.ipynb
examples/: 03-trajectoires.ipynb  04-transition_matrix.ipynb  05-push_forward.ipynb  06-lagrangian_geography.ipynb  07-netcdf-io.ipynb
paper/: conf.py  index.rst  paper.bib
paper/_build/doctrees/: environment.pickle  index.doctree
paper/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
pygtm/: dataset.py  matrix.py  physical.py  segments.py  setup.py  tools.py  tpt.py
tests/: dataset_tests.py  physical_tests.py  tools_tests.py
tutorials/: 01-physical_domain.ipynb  02-search_elements.ipynb  03-trajectoires.ipynb  04-transition_matrix.ipynb  05-push_forward.ipynb  06-lagrangian_geography.ipynb  07-netcdf-io.ipynb  08-netcdf-io.ipynb
